fixed the card spacing

--- a/src/components/pages/Home-v2/Features/styles.module.scss
+++ b/src/components/pages/Home-v2/Features/styles.module.scss
@@ -12,8 +12,8 @@
   &_cards {
     display: grid;
     grid-template-columns: repeat(5, minmax(0, 1fr));
-    column-gap: 24px;
-    row-gap: 32px;
+    column-gap: var(--spacer-4);
+    row-gap: var(--spacer-4);
     margin: 0;
     padding: 0;
     list-style: none;
@@ -37,6 +37,10 @@
     line-height: 120% !important;
     letter-spacing: -0.09px !important;
     max-width: 173px;
+    @include media-breakpoint-down(xxl) {
+      max-width: 100%;
+      padding-right: 20px;
+    }
   }
   @include media-breakpoint-down(xxl) {
     &_cards {
