--- a/src/components/ui/Card-v2/styles.module.scss
+++ b/src/components/ui/Card-v2/styles.module.scss
@@ -11,6 +11,7 @@
   align-items: flex-start;
   flex-direction: column;
   padding-left: 21.72px;
+  padding-right: 8px;
   border: none;
   position: relative;
   z-index: 0;
